Menambahkan Swagger ke collection Alumni, Pekerjaan, Login
